# makemahjongg

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/: README.md
src/makemahjongg/: __main__.py  tileutil.py
